--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<!--<app-header></app-header>-->
+<app-header></app-header>
 <app-toolbar></app-toolbar>
 <app-navbar [items]='companies'></app-navbar>
 <router-outlet></router-outlet>
