--- a/src/app/feature/cita/components/cita/cita.component.html
+++ b/src/app/feature/cita/components/cita/cita.component.html
@@ -2,5 +2,6 @@
     <!--<a id="linkCita" routerLink="./" routerLinkActive="active"
     [routerLinkActiveOptions]="{ exact: true }">Cita</a>-->
     <a id="linkCitaListar" class="btn btn-info" routerLink="./listar" routerLinkActive="active">Listado Citas</a>
+    <a id="linkCitaCrear" class="btn btn-info" routerLink="./crear" routerLinkActive="active">Crear Cita</a>
 </nav>
 <router-outlet></router-outlet>
