--- a/src/app/feature/cita/components/cita-crear/cita-crear.component.html
+++ b/src/app/feature/cita/components/cita-crear/cita-crear.component.html
@@ -1,1 +1,58 @@
-<p>cita-crear works!</p>
+<br>
+
+<div class="card bg-dark text-white">
+    <div class="card-body">
+
+        <form (ngSubmit)="crear()">
+
+            <div class="form-group row">
+                <label for="cliente" class="col-form-label col-sm-2">Cliente</label>
+                <div class="col-sm-6">
+                    <input validar type="text" class="form-control" [(ngModel)]="citaDto.idCliente" name="idCliente">
+                </div>
+            </div>
+
+            <div class="form-group row">
+                <label for="tarifa" class="col-form-label col-sm-2">Tarifa</label>
+                <div class="col-sm-6">
+                    <input validar type="text" class="form-control" [(ngModel)]="citaDto.idTarifa" name="idTarifa">
+                </div>
+            </div>
+
+            <div class="form-group row">
+                <label for="" class="col-form-label col-sm-2">Fecha de la cita</label>
+                <div class="col-sm-6">
+                    <input validar type="text" class="form-control" [(ngModel)]="citaDto.fechaCita" name="fechaCita">
+                </div>
+            </div>
+
+            <div class="form-group row">
+                <label for="" class="col-form-label col-sm-2">Hora de la cita</label>
+                <div class="col-sm-6">
+                    <input validar type="text" class="form-control" [(ngModel)]="citaDto.horaCita" name="horaCita">
+                </div>
+            </div>
+
+            <div class="form-group row">
+                <label for="" class="col-form-label col-sm-2">Horario de la cita</label>
+                <div class="col-sm-6">
+                    <input validar type="text" class="form-control" [(ngModel)]="citaDto.horario" name="horario">
+                </div>
+            </div>
+
+            <div class="form-group row">
+                <label for="" class="col-form-label col-sm-2">Número de metros cuadrados</label>
+                <div class="col-sm-6">
+                    <input validar type="text" class="form-control" [(ngModel)]="citaDto.metrosCuadrados"
+                        name="metrosCuadrados">
+                </div>
+            </div>
+
+            <div class="form-group row">
+                <div class="col-sm-6">
+                    <button class="btn btn-primary" role="button">Crear</button>
+                </div>
+            </div>
+        </form>
+    </div>
+</div>
